[package]
name = "libp2p-ping-pong-tor"
edition = "2018"
description = "Libp2p Ping-Pong example using TCP and Tor's Socks5"
version = "0.7.1"
authors = ["Philipp Hoenisch <philipp@hoenisch.at>"]
license = "GPL-3.0"
keywords = ["socks", "tor", "peer-to-peer", "libp2p", "networking"]
exclude = ["rustfmt.toml"]

[dependencies]
anyhow = "1.0"
data-encoding = "2.3"
env_logger = "0.8"
futures = "0.3"
futures-timer = "3.0"
get_if_addrs = "0.5"
ipnet = "2.3"
libp2p = { version = "0.36", default-features = false, features = [ "noise", "yamux", "mplex", "dns-tokio", "tcp-tokio", "ping"] }
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls","socks"], default-features = false }
socket2 = "0.3"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-socks = "0.5"
torut = "0.1"
